--- a/SpinTest/en.lproj/MainStoryboard.storyboard
+++ b/SpinTest/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,86 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C54" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Spin View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="SpinViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sIB-BY-66W">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="spin">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="spinPressed:" destination="2" eventType="touchUpInside" id="Bnm-hq-7PS"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="card-front.png" translatesAutoresizingMaskIntoConstraints="NO" id="dEo-uq-Bgx"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="card-back.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZGN-i6-DQe">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="243" id="IZb-Aq-pAG"/>
+                                    <constraint firstAttribute="width" constant="171" id="IpT-au-dua"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfz-Z0-zgV">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZGN-i6-DQe" firstAttribute="bottom" secondItem="dEo-uq-Bgx" secondAttribute="bottom" type="default" id="2JH-bs-CWz"/>
+                            <constraint firstItem="jfz-Z0-zgV" firstAttribute="top" secondItem="ZGN-i6-DQe" secondAttribute="top" type="default" id="7wd-vX-SiQ"/>
+                            <constraint firstItem="dEo-uq-Bgx" firstAttribute="leading" secondItem="jfz-Z0-zgV" secondAttribute="leading" type="default" id="Aqb-8a-8wF"/>
+                            <constraint firstAttribute="bottom" secondItem="sIB-BY-66W" secondAttribute="bottom" constant="168" id="Bpi-qO-mmw"/>
+                            <constraint firstItem="dEo-uq-Bgx" firstAttribute="trailing" secondItem="ZGN-i6-DQe" secondAttribute="trailing" type="default" id="BwP-Kw-dil"/>
+                            <constraint firstItem="ZGN-i6-DQe" firstAttribute="top" secondItem="3" secondAttribute="top" constant="66" id="Iyi-8I-xIr"/>
+                            <constraint firstItem="ZGN-i6-DQe" firstAttribute="top" secondItem="dEo-uq-Bgx" secondAttribute="top" type="default" id="R9w-FQ-W2L"/>
+                            <constraint firstItem="dEo-uq-Bgx" firstAttribute="bottom" secondItem="jfz-Z0-zgV" secondAttribute="bottom" type="default" id="T9G-kN-KkJ"/>
+                            <constraint firstItem="ZGN-i6-DQe" firstAttribute="trailing" secondItem="jfz-Z0-zgV" secondAttribute="trailing" type="default" id="dth-Ic-Kgy"/>
+                            <constraint firstItem="jfz-Z0-zgV" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="65" id="hv6-jO-NyX"/>
+                            <constraint firstItem="jfz-Z0-zgV" firstAttribute="leading" secondItem="ZGN-i6-DQe" secondAttribute="leading" type="default" id="kEG-zZ-mZW"/>
+                            <constraint firstItem="sIB-BY-66W" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="110" id="yhf-Gg-kcD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="card" destination="jfz-Z0-zgV" id="pP6-JV-aBL"/>
+                        <outlet property="cardBack" destination="ZGN-i6-DQe" id="rTy-PJ-ffS"/>
+                        <outlet property="cardFront" destination="ZGN-i6-DQe" id="6ZI-8y-Blz"/>
+                        <outlet property="spinPressed" destination="sIB-BY-66W" id="6B5-IK-cfP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="card-back.png" width="1356" height="1949"/>
+        <image name="card-front.png" width="1356" height="1933"/>
+    </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SpinViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SpinViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="spinPressed:"/>
+                <relationship kind="outlet" name="card" candidateClass="UIView"/>
+                <relationship kind="outlet" name="cardBack" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="cardFront" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
